--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
     <title>PizzaWay</title>
 </head>
 <body>
+    hhhhhhhhhhhhh
+
+    <nav class="navbar navbar-dark navbar-full" id="main-nav">
+        <a class="navbar-brand" href="index.html">Pizza<span class="bold-colored">Way</span></a>
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+        </ul>
+    </nav>
     
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/scripts.js"></script>
