--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@
     <title>PizzaWay</title>
 </head>
 <body>
-    hhhhhhhhhhhhh
-
-    <nav class="navbar navbar-dark navbar-full" id="main-nav">
-        <a class="navbar-brand" href="index.html">Pizza<span class="bold-colored">Way</span></a>
-        <ul class="nav navbar-nav">
-            <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-        </ul>
-    </nav>
-    
+<!-- Header -->
+    <header>
+        <div class="container">
+            <a class="logo" href="#" alt="Logo"> Pizza<span class="bold-colored">Way</span></a>
+            <nav>
+                <ul class="main-menu font-mountainsre" id="main-menu">
+                    <li><a href="#" class="active home">HOME</a></li>
+                    <li><a href="#">ABOUT US</a></li>
+                    <li><a href="#">SERVICES</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="menu-toggle"><i class="fa fa-bars fa-2x"  aria-hidden="true"></i></div>
+    </header>
     <script src="./js/jquery-3.5.1.js"></script>
     <script src="./js/scripts.js"></script>
 </body>
