--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
 <!-- Header -->
     <header>
         <div class="container">
-            <a class="logo" href="#" alt="Logo"> Pizza<span class="bold-colored">Way</span></a>
+            <a class="logo" href="#" alt="Logo">Pizza<span class="bold-colored">Way</span></a>
             <nav>
                 <ul class="main-menu font-mountainsre" id="main-menu">
                     <li><a href="#" class="active home">HOME</a></li>
                     <li><a href="#">ABOUT US</a></li>
                     <li><a href="#">SERVICES</a></li>
                     <li><a href="#">CONTACT</a></li>
+                    <!-- single info -->
+                        <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
+                        <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
+                        <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - Kshs.<span class="item-total">1200</span></p>
+                    </div>
+                <!-- end of single info -->
                 </ul>
             </nav>
         </div>
