--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="./css/fonts/beyond_the_mountains-webfont.css" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media_queries.css">
     <title>PizzaWay</title>
@@ -31,7 +33,7 @@
             <div class="line2"></div>
             <div class="line3"></div>
         </div>
-      </nav>
+    </nav>
 
 
 
