landing page created

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <title>PizzaWay</title>
 </head>
 <body>
+    
     <nav>
         <div class="logo">
-            <h1><span class="bolder-colored">Pizza</span><span class="bold-colored">Way</span></h1>
+            <h1><i class="fas fa-pizza-slice"></i><span class="bolder-colored">Pizza</span><span class="bold-colored">Way</span> </h1>
         </div>
         <ul class="nav-links">
             <li> <a href="#home">Home</a> </li>
@@ -34,6 +35,29 @@
             <div class="line3"></div>
         </div>
     </nav>
+    
+    <section class="cover">
+        <div class="container">
+            <div class="card first-card">
+                <div class="card-body">
+                    <h5 class="card-title"><span class="span-colored">Welcome</span><br>
+                    <span class="spann-colored">To</span><br>
+                    <span class="span-colored">Pizza</span><span class="spann-colored">Way.</span></h5>
+                    <p class="card-text">At <span class="span-color">Pizza</span><span class="spann-color">Way</span>,
+                        we believe that using freshest ingredients produces the best results.We are tireless in staying abreast of latest food trends.</p>
+                    <a href="#" class="btn btn-primary">Make Your Order</a>
+                </div>
+            </div> 
+            <div class="card second-card">
+                <img class="card-img-top" src="./assets/pizza-5.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>                  
+        </div>
+    </section>
 
 
 
