about page created

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- single info -->
         <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>
-            <p class="mb-0 text-capitalize"><span id="item-count">2 </span> items - $<span class="item-total">10.49</span></p>
+            <p class="mb-0 text-capitalize"><span id="item-count">0</span> items - $<span class="item-total">0</span></p>
         </div>
         <!-- end of single info -->
         <div class="burger">
@@ -46,7 +46,7 @@
                     <span class="span-colored">Pizza</span><span class="spann-colored">Way.</span></h5>
                     <p class="card-text">At <span class="span-color">Pizza</span><span class="spann-color">Way</span>,
                         we believe that using freshest ingredients produces the best results.We are tireless in staying abreast of latest food trends.</p>
-                    <a href="#" class="btn btn-primary">Make Your Order</a>
+                        <a href="#" class="btn btn-primary">Order Now</a>
                 </div>
             </div> 
             <div class="card second-card">
@@ -83,6 +83,28 @@
             </div>                
         </div>
     </section>
+    <!-- about us -->
+    <section class="about py-5" id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-10 about-description mx-auto col-md-6 my-5">
+                    <h1 class="text-capitalize"><span class="spann-colored">about</span> &ensp; 
+                        <strong class="banner-title"><span class="span-about">Us</span></strong></h1>
+                    <p class="my-4 text-muted about-text w-75">We serve the best, yummy tasty pizza in town. <br>
+                    we are dedicated to providing great tasting pizza for carryout or delivered to your door. <br>
+                    Beyond pioneering the concept of efficient delivery of made-to-order pizzas, we have been part of innovations that 
+                    have made a significant impact on the entire food delivery industry.</p>
+                    <a href="#" class="btn btn-outline-secondary btn-black text-uppercase ">Read More...</a>
+                </div>
+                <div class="col-10 mx-auto col-md-6 align-self-center my-5">
+                    <div class="about-img__container">
+                        <img src="./cart-items/pizza-5.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- end of about us -->
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
