changed fonts for about us page

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <div class="col-10 about-description mx-auto col-md-6 my-5">
                     <h1 class="text-capitalize"><span class="spann-colored">about</span> &ensp; 
                         <strong class="banner-title"><span class="span-about">Us</span></strong></h1>
-                    <p class="my-4 text-muted about-text w-75">We serve the best, yummy tasty pizza in town. <br>
-                    we are dedicated to providing great tasting pizza for carryout or delivered to your door. <br>
+                    <p class="my-4 text-muted about-text w-75">We serve the best, yummy and tasty pizzas in town. <br>
+                    we are dedicated to providing great tasting pizza for <span class="spane-color">carryout</span>  or <span class="spane-color">delivered</span> to your door. <br>
                     Beyond pioneering the concept of efficient delivery of made-to-order pizzas, we have been part of innovations that 
                     have made a significant impact on the entire food delivery industry.</p>
                     <a href="#" class="btn btn-outline-secondary btn-black text-uppercase ">Read More...</a>
