--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                         </div>
                         <h5 class="mt-20">Peri-Peri Chicken</h5>
                         <h4 class="mt-5"><b>Kshs 1500.00</b></h4>
+                        <h6 class="mt-20"><a href="#" class="btn-brdr-primary plr-25"><b>Order Now</b></a></h6>
                     </div><!--text-center-->
                 </div><!-- col-md-3 -->
                 <div class="col-lg-3 col-md-4  col-sm-6 ">
@@ -213,8 +214,42 @@
             </div><!-- row -->
         </div><!-- container -->
     </section>
-    
 
+    <section class="contact">
+        <h1><span class="bolder-colored">Contact </span>&ensp; <span class="bold-colored">Us </span></h1>
+        <form action="">
+            <div id="form">
+                <div class="row form-group justify-content-center align-items-center">
+                    <div class="col-md-4">
+                    <input type="text" name="name" value="" placeholder="Name" class="form-control" id="full_name">
+                    </div>
+                    <div class="col-md-4">
+                    <input type="email"  name="email" placeholder="Email" value="" class="form-control" id="email">
+                    </div>
+                </div>
+                <div class="row form-group justify-content-center align-items-center">
+                    <div class="col-md-8" id="message">
+                    <textarea type="text" value="" placeholder="Message" class="form-control message" id="message"></textarea>
+                    </div>
+                </div>
+                <div class="row form-group justify-content-center align-items-center">
+                    <div class="col-md-4">
+                    <input type="submit"  value="Submit" class="btn btn-primary submit">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
+    <div class="footer-section">
+        <h4 class="footer-heading"><span class="bolder-colored">Follow</span>&ensp;<span class="bold-colored">Us</span> <span class="bolder-colored">On</span></h4>
+        <ul class="social-links">
+            <li class="social-link"><i class="fab fa-facebook"></i></li>
+            <li class="social-link"><i class="fab fa-twitter"></i></li>
+            <li class="social-link"><i class="fab fa-instagram"></i></li>
+        </ul>
+        <p class="right">Copyright &copy <script>document.write(new Date().getFullYear());</script></p>   <p class="right">All Rights Reserved.</p>
+        <span class="caret scrollToTop"><i class="fas fa-caret-square-up"></i></span>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
