--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Concert+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/media_queries.css">
+    <link rel="icon" type="image/png" href="./assets/fav2.ico"/>
     <title>PizzaWay</title>
 </head>
 <body>
