--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <!-- single info -->
         <div id="cart-info" class="nav-info align-items-center cart-info d-flex justify-content-between mx-lg-5">
             <span class="cart-info__icon mr-lg-3"><i class="fas fa-shopping-cart"></i></span>&ensp;
-            <p class="mb-0 text-capitalize"><span id="item-count">Cart <span class="item-total"> 0</span></p>
+            <a href="cart.html"><p class="mb-0 text-capitalize"><span id="item-count">Cart <span class="item-total"> 0</span></p></a>
+            
         </div>
         <!-- end of single info -->
         <div class="burger">
